Adds binding energy for unbound state in the GenomeBindingTable class

--- a/paper/Manuscript.ipynb
+++ b/paper/Manuscript.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-04T03:15:52.138745Z",
-     "start_time": "2018-10-04T03:15:51.657326Z"
+     "end_time": "2018-10-14T00:42:24.142385Z",
+     "start_time": "2018-10-14T00:42:19.476446Z"
     },
     "scrolled": false
    },
@@ -98,6 +98,56 @@
     "\n",
     "yeastBg = [3.093e-01,1.907e-01,1.907e-01,3.093e-01] \n",
     "cbcolors = {'sky blue': (86/255.0,180/255.0,233/255.0)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-14T00:57:14.732305Z",
+     "start_time": "2018-10-14T00:57:11.951517Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "_numLocations = 1000\n",
+    "_chemicalPotential = 3\n",
+    "_baselineEnergies = distributions.truncPowerLawRVs( 0.5, 0, 10, size=_numLocations )\n",
+    "\n",
+    "genome = cs.performChipSeq( spEnergies=_baselineEnergies, chemicalPotential=_chemicalPotential, numCells=10000 ) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-14T00:57:32.094855Z",
+     "start_time": "2018-10-14T00:57:30.860963Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe62463b4e0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genome['p_occ_chip'].plot(kind='kde')"
    ]
   },
   {
