Fixes linebreak errors in previous commit of Manuscripy.ipynb

--- a/paper/Manuscript.ipynb
+++ b/paper/Manuscript.ipynb
@@ -675,7 +675,9 @@
     "if variationType == 'normal':\n",
     "    fig, axes = getPaperFigureHandle('Figure 2')\n",
     "elif variationType == 'powerLaw':\n",
-    "    fig, axes = getPaperFigureHandle('Figure S2')    ax = axes[0,2]\n",
+    "    fig, axes = getPaperFigureHandle('Figure S2')    \n",
+    "    \n",
+    "ax = axes[0,2]\n",
     "ax.clear()\n",
     "plt.sca(ax)\n",
     "\n",
@@ -1910,7 +1912,9 @@
     "if variationType == 'normal':\n",
     "    fig, axes = getPaperFigureHandle('Figure 2')\n",
     "elif variationType == 'powerLaw':\n",
-    "    fig, axes = getPaperFigureHandle('Figure S2')    ax = axes[1,2]\n",
+    "    fig, axes = getPaperFigureHandle('Figure S2')    \n",
+    "\n",
+    "ax = axes[1,2]\n",
     "ax.clear()\n",
     "plt.sca(ax)\n",
     "lineStyles = ['dotted','dashed','solid']\n",
