--- a/paper/Manuscript.ipynb
+++ b/paper/Manuscript.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-14T00:42:24.142385Z",
-     "start_time": "2018-10-14T00:42:19.476446Z"
+     "end_time": "2018-10-15T20:04:53.622635Z",
+     "start_time": "2018-10-15T20:04:49.425337Z"
     },
     "scrolled": false
    },
@@ -144,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-14T01:09:46.579919Z",
-     "start_time": "2018-10-14T01:09:19.286445Z"
+     "end_time": "2018-10-15T20:06:26.712789Z",
+     "start_time": "2018-10-15T20:06:00.605217Z"
     },
     "scrolled": true
    },
@@ -671,7 +671,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "if variationType == 'normal':\n",
     "    fig, axes = getPaperFigureHandle('Figure 2')\n",
     "elif variationType == 'powerLaw':\n",
@@ -705,11 +704,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-15T05:02:37.536820Z",
-     "start_time": "2018-10-15T05:02:09.930156Z"
+     "end_time": "2018-10-15T23:11:38.302024Z",
+     "start_time": "2018-10-15T23:11:11.521990Z"
     },
     "scrolled": false
    },
@@ -754,6 +753,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-15T23:13:24.804824Z",
+     "start_time": "2018-10-15T23:13:24.788565Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for ax in axes.ravel():\n",
+    "    ax.set_xlabel('')\n",
+    "    ax.set_ylabel('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-15T23:13:33.390018Z",
+     "start_time": "2018-10-15T23:13:33.305417Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fig.tight_layout()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -762,15 +791,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T22:11:40.950819Z",
-     "start_time": "2018-10-03T22:11:37.590720Z"
+     "end_time": "2018-10-15T23:01:36.117731Z",
+     "start_time": "2018-10-15T23:01:32.949898Z"
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-0.830323204633355, 1.1883826742534435e-77)\n"
+     ]
+    }
+   ],
    "source": [
     "numLocations = 1000\n",
     "\n",
@@ -829,11 +866,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-15T05:35:03.432932Z",
-     "start_time": "2018-10-15T05:03:43.173791Z"
+     "end_time": "2018-10-15T20:40:03.237520Z",
+     "start_time": "2018-10-15T20:09:30.754601Z"
     },
     "scrolled": true
    },
@@ -1009,20 +1046,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T19:21:28.564843Z",
-     "start_time": "2018-10-03T19:21:11.158118Z"
+     "end_time": "2018-10-15T21:36:45.627983Z",
+     "start_time": "2018-10-15T21:05:57.158206Z"
     },
     "code_folding": [],
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/7,0/2,1/10\n",
+      "1/7,0/2,2/10\n",
+      "1/7,0/2,3/10\n",
+      "1/7,0/2,4/10\n",
+      "1/7,0/2,5/10\n",
+      "1/7,0/2,6/10\n",
+      "1/7,0/2,7/10\n",
+      "1/7,0/2,8/10\n",
+      "1/7,0/2,9/10\n",
+      "1/7,0/2,10/10\n",
+      "2/7,0/2,1/10\n",
+      "2/7,0/2,2/10\n",
+      "2/7,0/2,3/10\n",
+      "2/7,0/2,4/10\n",
+      "2/7,0/2,5/10\n",
+      "2/7,0/2,6/10\n",
+      "2/7,0/2,7/10\n",
+      "2/7,0/2,8/10\n",
+      "2/7,0/2,9/10\n",
+      "2/7,0/2,10/10\n",
+      "3/7,0/2,1/10\n",
+      "3/7,0/2,2/10\n",
+      "3/7,0/2,3/10\n",
+      "3/7,0/2,4/10\n",
+      "3/7,0/2,5/10\n",
+      "3/7,0/2,6/10\n",
+      "3/7,0/2,7/10\n",
+      "3/7,0/2,8/10\n",
+      "3/7,0/2,9/10\n",
+      "3/7,0/2,10/10\n",
+      "4/7,0/2,1/10\n",
+      "4/7,0/2,2/10\n",
+      "4/7,0/2,3/10\n",
+      "4/7,0/2,4/10\n",
+      "4/7,0/2,5/10\n",
+      "4/7,0/2,6/10\n",
+      "4/7,0/2,7/10\n",
+      "4/7,0/2,8/10\n",
+      "4/7,0/2,9/10\n",
+      "4/7,0/2,10/10\n",
+      "5/7,0/2,1/10\n",
+      "5/7,0/2,2/10\n",
+      "5/7,0/2,3/10\n",
+      "5/7,0/2,4/10\n",
+      "5/7,0/2,5/10\n",
+      "5/7,0/2,6/10\n",
+      "5/7,0/2,7/10\n",
+      "5/7,0/2,8/10\n",
+      "5/7,0/2,9/10\n",
+      "5/7,0/2,10/10\n",
+      "6/7,0/2,1/10\n",
+      "6/7,0/2,2/10\n",
+      "6/7,0/2,3/10\n",
+      "6/7,0/2,4/10\n",
+      "6/7,0/2,5/10\n",
+      "6/7,0/2,6/10\n",
+      "6/7,0/2,7/10\n",
+      "6/7,0/2,8/10\n",
+      "6/7,0/2,9/10\n",
+      "6/7,0/2,10/10\n",
+      "7/7,0/2,1/10\n",
+      "7/7,0/2,2/10\n",
+      "7/7,0/2,3/10\n",
+      "7/7,0/2,4/10\n",
+      "7/7,0/2,5/10\n",
+      "7/7,0/2,6/10\n",
+      "7/7,0/2,7/10\n",
+      "7/7,0/2,8/10\n",
+      "7/7,0/2,9/10\n",
+      "7/7,0/2,10/10\n",
+      "1/7,1/2,1/10\n",
+      "1/7,1/2,2/10\n",
+      "1/7,1/2,3/10\n",
+      "1/7,1/2,4/10\n",
+      "1/7,1/2,5/10\n",
+      "1/7,1/2,6/10\n",
+      "1/7,1/2,7/10\n",
+      "1/7,1/2,8/10\n",
+      "1/7,1/2,9/10\n",
+      "1/7,1/2,10/10\n",
+      "2/7,1/2,1/10\n",
+      "2/7,1/2,2/10\n",
+      "2/7,1/2,3/10\n",
+      "2/7,1/2,4/10\n",
+      "2/7,1/2,5/10\n",
+      "2/7,1/2,6/10\n",
+      "2/7,1/2,7/10\n",
+      "2/7,1/2,8/10\n",
+      "2/7,1/2,9/10\n",
+      "2/7,1/2,10/10\n",
+      "3/7,1/2,1/10\n",
+      "3/7,1/2,2/10\n",
+      "3/7,1/2,3/10\n",
+      "3/7,1/2,4/10\n",
+      "3/7,1/2,5/10\n",
+      "3/7,1/2,6/10\n",
+      "3/7,1/2,7/10\n",
+      "3/7,1/2,8/10\n",
+      "3/7,1/2,9/10\n",
+      "3/7,1/2,10/10\n",
+      "4/7,1/2,1/10\n",
+      "4/7,1/2,2/10\n",
+      "4/7,1/2,3/10\n",
+      "4/7,1/2,4/10\n",
+      "4/7,1/2,5/10\n",
+      "4/7,1/2,6/10\n",
+      "4/7,1/2,7/10\n",
+      "4/7,1/2,8/10\n",
+      "4/7,1/2,9/10\n",
+      "4/7,1/2,10/10\n",
+      "5/7,1/2,1/10\n",
+      "5/7,1/2,2/10\n",
+      "5/7,1/2,3/10\n",
+      "5/7,1/2,4/10\n",
+      "5/7,1/2,5/10\n",
+      "5/7,1/2,6/10\n",
+      "5/7,1/2,7/10\n",
+      "5/7,1/2,8/10\n",
+      "5/7,1/2,9/10\n",
+      "5/7,1/2,10/10\n",
+      "6/7,1/2,1/10\n",
+      "6/7,1/2,2/10\n",
+      "6/7,1/2,3/10\n",
+      "6/7,1/2,4/10\n",
+      "6/7,1/2,5/10\n",
+      "6/7,1/2,6/10\n",
+      "6/7,1/2,7/10\n",
+      "6/7,1/2,8/10\n",
+      "6/7,1/2,9/10\n",
+      "6/7,1/2,10/10\n",
+      "7/7,1/2,1/10\n",
+      "7/7,1/2,2/10\n",
+      "7/7,1/2,3/10\n",
+      "7/7,1/2,4/10\n",
+      "7/7,1/2,5/10\n",
+      "7/7,1/2,6/10\n",
+      "7/7,1/2,7/10\n",
+      "7/7,1/2,8/10\n",
+      "7/7,1/2,9/10\n",
+      "7/7,1/2,10/10\n"
+     ]
+    }
+   ],
    "source": [
     "numLocations = 1000\n",
     "\n",
-    "numReps = 2\n",
+    "numReps = 10\n",
     "#fracCoopSet = np.arange( 0.001, 1.0, 0.1 )\n",
     "fracCoopSet = [0.001,0.01,0.1,0.2,0.3,0.4,0.5]\n",
     "motifInformation = np.zeros( (len( fracCoopSet ), numReps ) )\n",
@@ -2259,11 +2443,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T20:24:30.346711Z",
-     "start_time": "2018-10-03T20:24:11.890985Z"
+     "end_time": "2018-10-15T22:10:21.496791Z",
+     "start_time": "2018-10-15T21:54:38.716828Z"
     },
     "code_folding": [
      32,
@@ -2271,7 +2455,93 @@
     ],
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,1,1\n",
+      "1,1,2\n",
+      "1,1,3\n",
+      "1,1,4\n",
+      "1,1,5\n",
+      "1,1,6\n",
+      "1,1,7\n",
+      "1,1,8\n",
+      "1,1,9\n",
+      "1,1,10\n",
+      "1,2,1\n",
+      "1,2,2\n",
+      "1,2,3\n",
+      "1,2,4\n",
+      "1,2,5\n",
+      "1,2,6\n",
+      "1,2,7\n",
+      "1,2,8\n",
+      "1,2,9\n",
+      "1,2,10\n",
+      "1,3,1\n",
+      "1,3,2\n",
+      "1,3,3\n",
+      "1,3,4\n",
+      "1,3,5\n",
+      "1,3,6\n",
+      "1,3,7\n",
+      "1,3,8\n",
+      "1,3,9\n",
+      "1,3,10\n",
+      "1,4,1\n",
+      "1,4,2\n",
+      "1,4,3\n",
+      "1,4,4\n",
+      "1,4,5\n",
+      "1,4,6\n",
+      "1,4,7\n",
+      "1,4,8\n",
+      "1,4,9\n",
+      "1,4,10\n",
+      "1,5,1\n",
+      "1,5,2\n",
+      "1,5,3\n",
+      "1,5,4\n",
+      "1,5,5\n",
+      "1,5,6\n",
+      "1,5,7\n",
+      "1,5,8\n",
+      "1,5,9\n",
+      "1,5,10\n",
+      "1,6,1\n",
+      "1,6,2\n",
+      "1,6,3\n",
+      "1,6,4\n",
+      "1,6,5\n",
+      "1,6,6\n",
+      "1,6,7\n",
+      "1,6,8\n",
+      "1,6,9\n",
+      "1,6,10\n",
+      "1,7,1\n",
+      "1,7,2\n",
+      "1,7,3\n",
+      "1,7,4\n",
+      "1,7,5\n",
+      "1,7,6\n",
+      "1,7,7\n",
+      "1,7,8\n",
+      "1,7,9\n",
+      "1,7,10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No handles with labels found to put in legend.\n",
+      "No handles with labels found to put in legend.\n",
+      "No handles with labels found to put in legend.\n"
+     ]
+    }
+   ],
    "source": [
     "numLocations = 1000\n",
     "\n",
@@ -2425,16 +2695,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T20:30:28.671486Z",
-     "start_time": "2018-10-03T20:30:18.273147Z"
+     "end_time": "2018-10-15T22:51:06.893301Z",
+     "start_time": "2018-10-15T22:20:53.972930Z"
     },
     "code_folding": [],
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1,1/2,1/7,1/10\n",
+      "1/1,1/2,1/7,2/10\n",
+      "1/1,1/2,1/7,3/10\n",
+      "1/1,1/2,1/7,4/10\n",
+      "1/1,1/2,1/7,5/10\n",
+      "1/1,1/2,1/7,6/10\n",
+      "1/1,1/2,1/7,7/10\n",
+      "1/1,1/2,1/7,8/10\n",
+      "1/1,1/2,1/7,9/10\n",
+      "1/1,1/2,1/7,10/10\n",
+      "1/1,1/2,2/7,1/10\n",
+      "1/1,1/2,2/7,2/10\n",
+      "1/1,1/2,2/7,3/10\n",
+      "1/1,1/2,2/7,4/10\n",
+      "1/1,1/2,2/7,5/10\n",
+      "1/1,1/2,2/7,6/10\n",
+      "1/1,1/2,2/7,7/10\n",
+      "1/1,1/2,2/7,8/10\n",
+      "1/1,1/2,2/7,9/10\n",
+      "1/1,1/2,2/7,10/10\n",
+      "1/1,1/2,3/7,1/10\n",
+      "1/1,1/2,3/7,2/10\n",
+      "1/1,1/2,3/7,3/10\n",
+      "1/1,1/2,3/7,4/10\n",
+      "1/1,1/2,3/7,5/10\n",
+      "1/1,1/2,3/7,6/10\n",
+      "1/1,1/2,3/7,7/10\n",
+      "1/1,1/2,3/7,8/10\n",
+      "1/1,1/2,3/7,9/10\n",
+      "1/1,1/2,3/7,10/10\n",
+      "1/1,1/2,4/7,1/10\n",
+      "1/1,1/2,4/7,2/10\n",
+      "1/1,1/2,4/7,3/10\n",
+      "1/1,1/2,4/7,4/10\n",
+      "1/1,1/2,4/7,5/10\n",
+      "1/1,1/2,4/7,6/10\n",
+      "1/1,1/2,4/7,7/10\n",
+      "1/1,1/2,4/7,8/10\n",
+      "1/1,1/2,4/7,9/10\n",
+      "1/1,1/2,4/7,10/10\n",
+      "1/1,1/2,5/7,1/10\n",
+      "1/1,1/2,5/7,2/10\n",
+      "1/1,1/2,5/7,3/10\n",
+      "1/1,1/2,5/7,4/10\n",
+      "1/1,1/2,5/7,5/10\n",
+      "1/1,1/2,5/7,6/10\n",
+      "1/1,1/2,5/7,7/10\n",
+      "1/1,1/2,5/7,8/10\n",
+      "1/1,1/2,5/7,9/10\n",
+      "1/1,1/2,5/7,10/10\n",
+      "1/1,1/2,6/7,1/10\n",
+      "1/1,1/2,6/7,2/10\n",
+      "1/1,1/2,6/7,3/10\n",
+      "1/1,1/2,6/7,4/10\n",
+      "1/1,1/2,6/7,5/10\n",
+      "1/1,1/2,6/7,6/10\n",
+      "1/1,1/2,6/7,7/10\n",
+      "1/1,1/2,6/7,8/10\n",
+      "1/1,1/2,6/7,9/10\n",
+      "1/1,1/2,6/7,10/10\n",
+      "1/1,1/2,7/7,1/10\n",
+      "1/1,1/2,7/7,2/10\n",
+      "1/1,1/2,7/7,3/10\n",
+      "1/1,1/2,7/7,4/10\n",
+      "1/1,1/2,7/7,5/10\n",
+      "1/1,1/2,7/7,6/10\n",
+      "1/1,1/2,7/7,7/10\n",
+      "1/1,1/2,7/7,8/10\n",
+      "1/1,1/2,7/7,9/10\n",
+      "1/1,1/2,7/7,10/10\n",
+      "1/1,2/2,1/7,1/10\n",
+      "1/1,2/2,1/7,2/10\n",
+      "1/1,2/2,1/7,3/10\n",
+      "1/1,2/2,1/7,4/10\n",
+      "1/1,2/2,1/7,5/10\n",
+      "1/1,2/2,1/7,6/10\n",
+      "1/1,2/2,1/7,7/10\n",
+      "1/1,2/2,1/7,8/10\n",
+      "1/1,2/2,1/7,9/10\n",
+      "1/1,2/2,1/7,10/10\n",
+      "1/1,2/2,2/7,1/10\n",
+      "1/1,2/2,2/7,2/10\n",
+      "1/1,2/2,2/7,3/10\n",
+      "1/1,2/2,2/7,4/10\n",
+      "1/1,2/2,2/7,5/10\n",
+      "1/1,2/2,2/7,6/10\n",
+      "1/1,2/2,2/7,7/10\n",
+      "1/1,2/2,2/7,8/10\n",
+      "1/1,2/2,2/7,9/10\n",
+      "1/1,2/2,2/7,10/10\n",
+      "1/1,2/2,3/7,1/10\n",
+      "1/1,2/2,3/7,2/10\n",
+      "1/1,2/2,3/7,3/10\n",
+      "1/1,2/2,3/7,4/10\n",
+      "1/1,2/2,3/7,5/10\n",
+      "1/1,2/2,3/7,6/10\n",
+      "1/1,2/2,3/7,7/10\n",
+      "1/1,2/2,3/7,8/10\n",
+      "1/1,2/2,3/7,9/10\n",
+      "1/1,2/2,3/7,10/10\n",
+      "1/1,2/2,4/7,1/10\n",
+      "1/1,2/2,4/7,2/10\n",
+      "1/1,2/2,4/7,3/10\n",
+      "1/1,2/2,4/7,4/10\n",
+      "1/1,2/2,4/7,5/10\n",
+      "1/1,2/2,4/7,6/10\n",
+      "1/1,2/2,4/7,7/10\n",
+      "1/1,2/2,4/7,8/10\n",
+      "1/1,2/2,4/7,9/10\n",
+      "1/1,2/2,4/7,10/10\n",
+      "1/1,2/2,5/7,1/10\n",
+      "1/1,2/2,5/7,2/10\n",
+      "1/1,2/2,5/7,3/10\n",
+      "1/1,2/2,5/7,4/10\n",
+      "1/1,2/2,5/7,5/10\n",
+      "1/1,2/2,5/7,6/10\n",
+      "1/1,2/2,5/7,7/10\n",
+      "1/1,2/2,5/7,8/10\n",
+      "1/1,2/2,5/7,9/10\n",
+      "1/1,2/2,5/7,10/10\n",
+      "1/1,2/2,6/7,1/10\n",
+      "1/1,2/2,6/7,2/10\n",
+      "1/1,2/2,6/7,3/10\n",
+      "1/1,2/2,6/7,4/10\n",
+      "1/1,2/2,6/7,5/10\n",
+      "1/1,2/2,6/7,6/10\n",
+      "1/1,2/2,6/7,7/10\n",
+      "1/1,2/2,6/7,8/10\n",
+      "1/1,2/2,6/7,9/10\n",
+      "1/1,2/2,6/7,10/10\n",
+      "1/1,2/2,7/7,1/10\n",
+      "1/1,2/2,7/7,2/10\n",
+      "1/1,2/2,7/7,3/10\n",
+      "1/1,2/2,7/7,4/10\n",
+      "1/1,2/2,7/7,5/10\n",
+      "1/1,2/2,7/7,6/10\n",
+      "1/1,2/2,7/7,7/10\n",
+      "1/1,2/2,7/7,8/10\n",
+      "1/1,2/2,7/7,9/10\n",
+      "1/1,2/2,7/7,10/10\n"
+     ]
+    }
+   ],
    "source": [
     "fidelityMat = {}\n",
     "\n",
@@ -2442,7 +2859,7 @@
     "labels = [\",\".join( [str(energy) for energy in bounds]) for bounds in energyRanges]\n",
     "fracCoopSet = [0.001,0.01,0.1,0.2,0.3,0.4,0.5]\n",
     "coopTf = 'Atf1'\n",
-    "numReps = 3\n",
+    "numReps = 10\n",
     "ratioColumn = 'ratio'\n",
     "\n",
     "quantiles = [[0,0.25],[0.25,0.5],[0.5,0.75],[0.75,1.0],[0,1.0]]\n",
@@ -2539,11 +2956,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T20:30:43.242682Z",
-     "start_time": "2018-10-03T20:30:43.108334Z"
+     "end_time": "2018-10-15T23:00:55.355812Z",
+     "start_time": "2018-10-15T23:00:55.291231Z"
     },
     "scrolled": true
    },
@@ -2974,7 +3391,7 @@
     "height": "820px",
     "left": "1px",
     "right": "1643px",
-    "top": "109px",
+    "top": "108px",
     "width": "176px"
    },
    "toc_section_display": "block",
