Modifies bulk ChIP-seq simulation to single-cell version.

--- a/paper/Scat.ipynb
+++ b/paper/Scat.ipynb
@@ -2,20 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: TkAgg\n"
+      "Using matplotlib backend: TkAgg\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
     "matplotlib.rcParams['svg.fonttype'] = 'none'\n",
     "from matplotlib import colors as mplcolors\n",
     "import scipy\n",
@@ -28,8 +31,8 @@
     "import MotifTable\n",
     "#import sklearn.metrics\n",
     "#import plots\n",
-    "import distributions\n",
     "%matplotlib\n",
+    "import distributions\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -67,6 +70,75 @@
     "\n",
     "yeastBg = [3.093e-01,1.907e-01,1.907e-01,3.093e-01] \n",
     "cbcolors = {'sky blue': (86/255.0,180/255.0,233/255.0)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bgEnergy = 5\n",
+    "numLocations = 500\n",
+    "accessibility = cs.sampleAccessibility( 2, numSamples=numLocations )\n",
+    "pExt = np.random.normal( 0.5, 0.05, size=numLocations )\n",
+    "numCells = 1000\n",
+    "\n",
+    "readsByCell = 20 + 200 * np.random.random(size=numCells)\n",
+    "readsByCell = readsByCell.astype(np.uint)\n",
+    "\n",
+    "uniqueMat = cs.performChipSeq( chromAccessibility=accessibility, numCells=numCells, pExt=pExt, nReads=readsByCell )\n",
+    "alpha, beta = cs.posteriorEstimate( uniqueMat )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7f09b731b518>]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sortOrder = np.argsort( accessibility )\n",
+    "yMax = np.zeros( numLocations )\n",
+    "yMin = np.zeros( numLocations )\n",
+    "yMean = np.zeros( numLocations )\n",
+    "for loc in range(numLocations):\n",
+    "    yMax[loc] = scipy.stats.gamma.ppf( 0.975, alpha[loc], beta[loc] )\n",
+    "    yMin[loc] = scipy.stats.gamma.ppf( 0.025, alpha[loc], beta[loc] )\n",
+    "    yMean[loc] = scipy.stats.gamma.mean( alpha[loc], beta[loc] )\n",
+    "\n",
+    "plt.plot( accessibility[sortOrder], yMin[sortOrder]  )\n",
+    "plt.plot( accessibility[sortOrder], yMax[sortOrder] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.2"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.stats.gamma.mean( 2, 1/5 )"
    ]
   }
  ],
