--- a/paper/Scat.ipynb
+++ b/paper/Scat.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: TkAgg\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Using matplotlib backend: TkAgg\n"
      ]
     }
    ],
@@ -28,48 +26,35 @@
     "import matplotlib as mpl\n",
     "from matplotlib import cm\n",
     "import chip_scratch as cs\n",
-    "import MotifTable\n",
-    "#import sklearn.metrics\n",
-    "#import plots\n",
     "%matplotlib\n",
-    "import distributions\n",
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "def getPaperFigureHandle( paperFigStr ):\n",
-    "    if plt.fignum_exists( paperFigStr ):\n",
-    "        return paperFigures[paperFigStr]\n",
-    "    else:\n",
-    "        return createFigure( paperFigStr )\n",
-    "\n",
-    "paperFigures = {}\n",
-    "def createFigure( paperFigStr ):\n",
-    "    global paperFigures\n",
-    "    if paperFigStr == 'Figure 3':\n",
-    "        paperFigures[paperFigStr] = plt.subplots( nrows=2,ncols=3, num='Figure 3' )\n",
-    "    elif paperFigStr == 'Figure 4':\n",
-    "        paperFigures[paperFigStr] = plt.subplots( nrows=2,ncols=3, num='Figure 4' )\n",
-    "    elif paperFigStr == 'Figure 5':\n",
-    "        paperFigures[paperFigStr] = plt.subplots( nrows=2,ncols=3, num='Figure 5' )        \n",
-    "    elif paperFigStr == 'Figure 2':\n",
-    "        paperFigures[paperFigStr] = plt.subplots( nrows=2, ncols=3, num='Figure 2' )\n",
-    "    elif paperFigStr == 'Figure S2':\n",
-    "        paperFigures[paperFigStr] = plt.subplots( nrows=2, ncols=3, num='Figure S2' )\n",
-    "    elif paperFigStr == 'Figure MI':\n",
-    "        paperFigures[paperFigStr] = plt.subplots( nrows=1, ncols=2, num='Figure MI' )\n",
-    "    elif paperFigStr == 'Figure S1':\n",
-    "        paperFigures[paperFigStr] = plt.subplots( nrows=4, ncols=4, num='Figure S1', sharey=True )        \n",
-    "    elif paperFigStr == 'Figure 1':\n",
-    "        paperFigures[paperFigStr] = plt.subplots( nrows=3, ncols=2, num='Figure 1', sharex=True )\n",
-    "        \n",
-    "    for ax in paperFigures[paperFigStr][1].ravel():\n",
-    "        ax.spines['right'].set_visible(False)\n",
-    "        ax.spines['top'].set_visible(False)\n",
-    "        \n",
-    "    return paperFigures[paperFigStr]\n",
-    "\n",
-    "yeastBg = [3.093e-01,1.907e-01,1.907e-01,3.093e-01] \n",
-    "cbcolors = {'sky blue': (86/255.0,180/255.0,233/255.0)}"
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numLocations = 300\n",
+    "accessibility = cs.sampleAccessibility( 10, numSamples=numLocations )\n",
+    "accessibility.sort()\n",
+    "accessibility = accessibility[::-1]\n",
+    "#accessibility = scipy.stats.beta.rvs( 0.5, 2, size=numLocations )\n",
+    "pExt = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#readsByCell = 50\n",
+    "numCells = 3000\n",
+    "readsByCell = 10 + 390 * np.random.random( size=numCells )\n",
+    "readsByCell = readsByCell.astype(np.uint)"
    ]
   },
   {
@@ -78,67 +63,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bgEnergy = 5\n",
-    "numLocations = 500\n",
-    "accessibility = cs.sampleAccessibility( 2, numSamples=numLocations )\n",
-    "pExt = np.random.normal( 0.5, 0.05, size=numLocations )\n",
-    "numCells = 1000\n",
-    "\n",
-    "readsByCell = 20 + 200 * np.random.random(size=numCells)\n",
-    "readsByCell = readsByCell.astype(np.uint)\n",
-    "\n",
-    "uniqueMat = cs.performChipSeq( chromAccessibility=accessibility, numCells=numCells, pExt=pExt, nReads=readsByCell )\n",
-    "alpha, beta = cs.posteriorEstimate( uniqueMat )"
+    "uniqueMat = cs.performChipSeq( chromAccessibility=accessibility, numCells=numCells, ampRatio=500, pExt=pExt, nReads=readsByCell )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f09b731b518>]"
+       "Text(0, 0.5, 'Estimated occupancy')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sortOrder = np.argsort( accessibility )\n",
-    "yMax = np.zeros( numLocations )\n",
-    "yMin = np.zeros( numLocations )\n",
-    "yMean = np.zeros( numLocations )\n",
-    "for loc in range(numLocations):\n",
-    "    yMax[loc] = scipy.stats.gamma.ppf( 0.975, alpha[loc], beta[loc] )\n",
-    "    yMin[loc] = scipy.stats.gamma.ppf( 0.025, alpha[loc], beta[loc] )\n",
-    "    yMean[loc] = scipy.stats.gamma.mean( alpha[loc], beta[loc] )\n",
+    "plt.figure()\n",
+    "effAccessibility = accessibility * pExt\n",
+    "posteriorDist = 'gamma-sc'\n",
+    "intervals, medians = cs.posteriorEstimate( uniqueMat, [5.5,2], posteriorDist=posteriorDist )\n",
     "\n",
-    "plt.plot( accessibility[sortOrder], yMin[sortOrder]  )\n",
-    "plt.plot( accessibility[sortOrder], yMax[sortOrder] )"
+    "errorbars = np.zeros((2,numLocations))\n",
+    "errorbars[0,:] = intervals[1] - medians\n",
+    "errorbars[1,:] = medians - intervals[0]\n",
+    "plt.errorbar( effAccessibility, medians, yerr=errorbars, marker='.', ms=3, lw=1, linestyle='none' )\n",
+    "if posteriorDist in 'beta':\n",
+    "    plt.plot( effAccessibility, effAccessibility, color='black' )\n",
+    "ax = plt.gca()\n",
+    "ax.set_xlabel('Actual occupancy')\n",
+    "ax.set_title(posteriorDist)\n",
+    "ax.set_ylabel('Estimated occupancy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.2"
+       "array([0.30119421, 0.26359714])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scipy.stats.gamma.mean( 2, 1/5 )"
+    "accessibility[[70,90]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.06284418786552902, 0.000572989231973922)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.stats.pearsonr( uniqueMat[:,70], uniqueMat[:,3] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc3e1fb3240>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series( accessibility ).plot( kind='kde' )"
    ]
   }
  ],
