Add cell to Manuscript to make test BED input

--- a/paper/Manuscript.ipynb
+++ b/paper/Manuscript.ipynb
@@ -40,7 +40,7 @@
     "from matplotlib import cm\n",
     "import chip_scratch as cs\n",
     "import MotifTable\n",
-    "import sklearn.metrics\n",
+    "#import sklearn.metrics\n",
     "import plots\n",
     "import distributions\n",
     "%matplotlib\n",
@@ -2234,6 +2234,41 @@
     "    print(\"Energy differences of single site mutants from a binding site whose energy is {}k_BT\".format( energy ) )\n",
     "    print( pd.Series( energyDiffDict[energy] ).quantile( [0.025,0.125,0.25]) )\n",
     "    print(\"------\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fasta generation example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a bed file containing genomic intervals from which to sample fragments. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pybedtools\n",
+    "\n",
+    "x = pybedtools.BedTool()\n",
+    "testPath = '../examples/testBed.bed'\n",
+    "length = 100\n",
+    "numRegions = 10\n",
+    "\n",
+    "y = x.random( l=length, n=numRegions, g='/home/vishakad/Data/Genomes/yeast-genome.fa.fai')\n",
+    "y.saveas(testPath)\n",
+    "bedDf = y.to_dataframe( names=['chr','start','end','name','length','strand'] )\n",
+    "\n",
+    "maxFragmentCount = 20\n",
+    "bedDf['fragment_count'] = np.random.randint( maxFragmentCount, size=numRegions )"
    ]
   }
  ],
