Add working fasta generator and pipeline.sh
The jupyter notebook outputs two .bed files for
ChIP and input samples. The pipeline.sh file converts
these into fasta files and aligns them using bwa.
samtools is then called to sort and index the alignments.

--- a/paper/Manuscript.ipynb
+++ b/paper/Manuscript.ipynb
@@ -18,15 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-06T12:38:33.816409Z",
-     "start_time": "2018-11-06T12:38:33.605321Z"
+     "end_time": "2018-12-25T14:00:13.259990Z",
+     "start_time": "2018-12-25T14:00:13.187792Z"
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: TkAgg\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib\n",
@@ -2240,7 +2250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fasta generation example"
+    "# BAM generation example"
    ]
   },
   {
@@ -2252,23 +2262,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 85,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-25T14:00:19.019241Z",
+     "start_time": "2018-12-25T14:00:18.915344Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pybedtools\n",
     "\n",
     "x = pybedtools.BedTool()\n",
     "testPath = '../examples/testBed.bed'\n",
-    "length = 100\n",
-    "numRegions = 10\n",
+    "length = 250\n",
+    "numRegions = 1000\n",
     "\n",
-    "y = x.random( l=length, n=numRegions, g='/home/vishakad/Data/Genomes/yeast-genome.fa.fai')\n",
-    "y.saveas(testPath)\n",
-    "bedDf = y.to_dataframe( names=['chr','start','end','name','length','strand'] )\n",
+    "y = x.random( l=length, n=numRegions, g='/home/vishakad/Data/Genomes/yeast-genome.fa.fai').sort()\n",
+    "bedDf = y.to_dataframe( names=['chr','start','end','name','score','strand'] )\n",
+    "bedDf.loc[:,'strand'] = '.'\n",
     "\n",
-    "maxFragmentCount = 20\n",
-    "bedDf['fragment_count'] = np.random.randint( maxFragmentCount, size=numRegions )"
+    "fragmentLength = 200\n",
+    "bedDf.loc[:,'p_occ'] = distributions.truncNorm( a=0.0, b=1, mu=0.4, sigma=0.6, size=numRegions )\n",
+    "bedDf.loc[:,'p_control'] = 0.4 * distributions.truncNorm( a=0.0,b=1.0, mu=0.1, sigma=0.05, size=numRegions )\n",
+    "bedDf.loc[:,'summit'] = np.random.randint( length, size=numRegions ) #Peak summit\n",
+    "peakNames = ['peak_' + str(peakNumber) for peakNumber in np.arange( 1, bedDf.shape[0]+1 ).astype(np.int)]\n",
+    "bedDf.loc[:,'name'] = peakNames\n",
+    "bedDf.loc[:,'score'] = np.int64( 1000*bedDf['p_occ'])\n",
+    "\n",
+    "numCells = 1000\n",
+    "bedDf.loc[:,'chip_fragment_count'] = np.random.binomial( numCells, bedDf['p_occ'], size=numRegions )\n",
+    "bedDf.loc[:,'control_fragment_count'] = np.random.binomial( numCells, bedDf['p_control'], size=numRegions )\n",
+    "fragmentJitter = 20\n",
+    "readLength = 42\n",
+    "bedDf.loc[:,'thickStart'] = bedDf['summit']\n",
+    "bedDf.loc[:,'thickEnd'] = bedDf['summit'] + 1\n",
+    "bedDf[['chr','start','end','name','score','strand','thickStart','thickEnd']].to_csv(testPath,sep=\"\\t\",index=False,header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-25T14:01:32.917696Z",
+     "start_time": "2018-12-25T14:01:30.065204Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "regionPrefix = 'region_'\n",
+    "\n",
+    "for (fileName,fragmentStr) in zip(['chip.bed','control.bed'],['chip_fragment_count','control_fragment_count']):\n",
+    "    numFragments = bedDf[fragmentStr].sum()\n",
+    "    readsDf = pd.DataFrame( )\n",
+    "    readsDf.loc[:,'chr'] = np.zeros( numFragments, dtype=np.object )\n",
+    "    readsDf.loc[:,'start'] = np.zeros( numFragments, dtype=np.int64 )\n",
+    "    readsDf.loc[:,'end'] = np.zeros( numFragments, dtype=np.int64 )\n",
+    "    readsDf.loc[:,'name'] = np.zeros( numFragments, dtype=np.object )\n",
+    "    readsDf.loc[:,'score'] = np.ones( numFragments, dtype=np.int )\n",
+    "    readsDf.loc[:,'strand'] = np.zeros( numFragments, dtype=np.object )\n",
+    "\n",
+    "    readIdx = 0\n",
+    "    strand = np.zeros( numFragments, dtype=np.object )\n",
+    "    strandRand = np.random.random( size=numFragments )\n",
+    "    posStrand = strandRand >= 0.5\n",
+    "    negStrand = ~posStrand\n",
+    "    strand[posStrand] = '+'\n",
+    "    strand[negStrand] = '-'\n",
+    "\n",
+    "    peakReadNames = np.repeat( peakNames, bedDf[fragmentStr] )\n",
+    "    idx = 0\n",
+    "    for (readName,count) in zip(peakNames,bedDf[fragmentStr]):\n",
+    "        peakReadNames[idx:(idx+count)] = [readName + '_' + str(readNumber) for readNumber in np.arange(1,count+1).astype(np.int)]\n",
+    "        idx += count\n",
+    "\n",
+    "    readsDf.loc[:,'strand'] = strand\n",
+    "    if fragmentStr == 'chip_fragment_count':\n",
+    "        fragmentMidPoints = np.repeat( bedDf['start'].values + bedDf['summit'].values, bedDf[fragmentStr])\n",
+    "        fragmentStartPos = np.random.normal( fragmentMidPoints, fragmentJitter, size=numFragments ).astype(np.int64)\n",
+    "    elif fragmentStr == 'control_fragment_count':\n",
+    "        fragmentMidPoints = np.repeat( bedDf['start'].values, bedDf[fragmentStr] )\n",
+    "        fragmentStartPos = fragmentMidPoints + length * np.random.randint( length+1, size=numFragments )\n",
+    "        \n",
+    "    readsDf.loc[posStrand,'start'] = fragmentStartPos[posStrand]\n",
+    "    readsDf.loc[posStrand,'end'] = fragmentStartPos[posStrand] + readLength - 1\n",
+    "    readsDf.loc[negStrand,'start'] = fragmentStartPos[negStrand] + fragmentLength - readLength\n",
+    "    readsDf.loc[negStrand,'end'] = fragmentStartPos[negStrand] + fragmentLength - 1\n",
+    "    readsDf.loc[:,'name'] = peakReadNames\n",
+    "    readsDf.loc[:,'chr'] = np.repeat( bedDf['chr'].values, bedDf[fragmentStr].values )\n",
+    "\n",
+    "    readsDf.to_csv('../examples/{}'.format( fileName ),sep=\"\\t\",index=False,header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-25T13:52:51.047585Z",
+     "start_time": "2018-12-25T13:52:51.030227Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "?np.random.poisson"
    ]
   }
  ],
@@ -2291,24 +2389,16 @@
    "version": "3.5.2"
   },
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "navigate_num": "#000000",
-    "navigate_text": "#333333",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700",
-    "sidebar_border": "#EEEEEE",
-    "wrapper_background": "#FFFFFF"
-   },
-   "moveMenuLeft": true,
+   "base_numbering": 1,
    "nav_menu": {
     "height": "135px",
     "width": "252px"
    },
-   "navigate_menu": true,
    "number_sections": true,
    "sideBar": false,
-   "threshold": 4,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {
     "height": "820px",
@@ -2318,8 +2408,7 @@
     "width": "176px"
    },
    "toc_section_display": "block",
-   "toc_window_display": true,
-   "widenNotebook": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
